<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="188dp"
        android:layout_height="160dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="11dp"
        android:background="@color/colorPrimaryDark"
        android:shadowColor="#00F1F1F1"
        android:text="@string/myDescription"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/program" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="423dp"
        android:layout_height="0dp"
        android:layout_marginBottom="400dp"
        android:contentDescription="@string/description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/photo" />

    <TextView
        android:id="@+id/name"
        android:layout_width="435dp"
        android:layout_height="62dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/paolaflores"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/program"
        android:layout_width="396dp"
        android:layout_height="33dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/programdesc"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="185dp"
        android:layout_height="163dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="5dp"
        android:background="@color/colorPrimaryDark"
        android:shadowColor="#00F1F1F1"
        android:text="@string/info"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/program" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="194dp"
        android:layout_height="84dp"
        android:layout_marginStart="108dp"
        android:layout_marginBottom="12dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/flag"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/home_page"
        android:textColor="#FDF9F9"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>