<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/program_text"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B5D3E7"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="385dp"
        android:layout_height="283dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="#0A094F"
        android:contentDescription="@string/text_program"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097"
        app:srcCompat="@drawable/pic" />

    <TextView
        android:id="@+id/name"
        android:layout_width="387dp"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="#0A094F"
        android:gravity="center"
        android:text="@string/text_name"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@+id/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="388dp"
        android:layout_height="49dp"
        android:background="#336296"
        android:gravity="center"
        android:text="@string/program_text"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/funfact"
        android:layout_width="201dp"
        android:layout_height="244dp"
        android:background="#C0C0C0"
        android:gravity="center"
        android:text="@string/funfact"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.054" />

    <TextView
        android:id="@+id/text_hobbies"
        android:layout_width="172dp"
        android:layout_height="155dp"
        android:background="#C0C0C0"
        android:gravity="center"
        android:text="@string/hobbies"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toEndOf="@+id/funfact"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.024" />

    <ImageButton
        android:id="@+id/backJB"
        android:layout_width="194dp"
        android:layout_height="84dp"
        android:layout_marginStart="212dp"
        android:layout_marginBottom="72dp"
        android:background="@null"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/flagjb" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="80dp"
        android:text="@string/home"
        android:textColor="#FAF6F6"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>