<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/HM"
        android:layout_width="154dp"
        android:layout_height="49dp"
        android:layout_marginStart="205dp"
        android:layout_marginTop="426dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="100dp"
        android:background="#CA6868"
        android:text="@string/haitao_mao"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <Button
        android:id="@+id/JB"
        android:layout_width="154dp"
        android:layout_height="49dp"
        android:layout_marginStart="205dp"
        android:layout_marginTop="365dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="256dp"
        android:text="@string/jasleen_bains"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/PF"
        android:layout_width="154dp"
        android:layout_height="49dp"
        android:layout_marginStart="205dp"
        android:layout_marginTop="456dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="364dp"
        android:text="@string/paola_flores"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="348dp"
        android:layout_height="100dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="503dp"
        android:background="@null"
        android:text="@string/profiles_main_page_group_b"
        android:textColor="#FFFFFD"
        android:textSize="33sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>